Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • M mutter
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 976
    • Issues 976
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 126
    • Merge requests 126
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • mutter
  • Issues
  • #2045

Closed
Open
Created Dec 03, 2021 by Alynx Zhou@AlynxZhou😼

NVIDIA/Wayland: GL_FRAMEBUFFER_UNSUPPORTED in some programs after using for hours

Affected version

Arch Linux, NVIDIA 495, Wayland only, Mutter 41.1+r20+ge3931f7b-1.

Bug summary

After e3931f7b, I got a lot of problem when running programs with GL.

Minecraft reports GL_FRAMEBUFFER_UNSUPPORTED and fails to start.

glxgears runs but the window is just black.

gtk4-demo reports Gsk:ERROR:../gtk/gsk/ngl/gsknglcommandqueue.c:1261:gsk_ngl_command_queue_create_render_target: assertion failed (glCheckFramebufferStatus (GL_FRAMEBUFFER) == GL_FRAMEBUFFER_COMPLETE): (0x00008cdd == 0x00008cd5).

Firefox tab crashes when opening webpage with WebGL (https://crash-stats.mozilla.org/report/index/36306019-2ef3-4086-9316-b8d5d0211201#allthreads.)

A re-login temporary fixes it, but it will happen again after using for hours.

After downgrade to Mutter 41.1 from Mutter 41.1+r20+ge3931f7b-1, I've used it for more then 4 hours and all things fine.

A question: It seems that only after e3931f7b we starts to use GBM with NVIDIA 495, however before this commit I can run wayland with NVIDIA 495 smoothly, I am not sure I am using GBM or EGLStreams, but I've tried EGLStreams wayland with NVIDIA 470, which has a lot of bugs, so I guess I am also using GBM without the commit?

Steps to reproduce

  1. Use NVIDIA card and nvidia 495 driver.
  2. Install Mutter with commit e3931f7b.
  3. Use wayland session for hours.
  4. Run glxgears to see if it's black or run gtk4-demo.

What happened

glxgears is black and gtk4-demo has error about GL_FRAMEBUFFER.

What did you expect to happen

Everything works fine.

Relevant logs, screenshots, screencasts etc.

Assignee
Assign to
Time tracking